--- a/assets/bootsplash/manifest.json
+++ b/assets/bootsplash/manifest.json
@@ -1,7 +1,7 @@
 {
-  "background": "#f5fcff",
+  "background": "#ffffff",
   "logo": {
     "width": 100,
-    "height": 217
+    "height": 100
   }
 }
